--- a/src/components/Ourteam/OurTeam.module.scss
+++ b/src/components/Ourteam/OurTeam.module.scss
@@ -1,19 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap");
 
 .teamContainer {
   overflow: hidden; /* Hide overflow to ensure no scroll bars appear */
   width: 100%; /* Full width of the viewport */
-  background: linear-gradient(180deg, #FFFCE8, #d0d0d0); /* Gradient background with two shades of gray */
+  background: linear-gradient(
+    180deg,
+    #fffce8,
+    #d0d0d0
+  ); /* Gradient background with two shades of gray */
   padding: 50px 0;
   position: relative;
-  font-family: 'Kanit', sans-serif;
+  font-family: "kanit", sans-serif;
   display: flex; /* Flex container for horizontal layout */
   flex-direction: column; /* Stack title and teamWrapper vertically */
   align-items: center; /* Center items horizontally */
 }
 
 .title {
-  font-family: 'kanit', sans-serif;
+  font-family: "kanit", sans-serif;
   font-size: 3rem; /* Adjust font size as needed */
   color: #e96b24; /* Title color */
   margin-bottom: 30px; /* Space below the title */
@@ -42,7 +46,7 @@
 }
 
 .teamMember {
-  background: #FFFCE8; /* Background color for each profile */
+  background: #fffce8; /* Background color for each profile */
   border-radius: 10px;
   overflow: hidden;
   text-align: center;
@@ -67,7 +71,7 @@
 
 .info h3 {
   font-size: 1.4rem; /* Adjusted font size for the name */
-  color: #09A8D4; /* Title color */
+  color: #09a8d4; /* Title color */
   margin: 10px 0; /* Space above and below the title */
 }
 
@@ -83,7 +87,7 @@
 }
 
 .socialIcons a {
-  color: #09A8D4; /* Icon color */
+  color: #09a8d4; /* Icon color */
   font-size: 1.4rem; /* Size of the icons */
 }
 
