--- a/src/components/TheWorkWeDo/TheWorkWeDo.module.scss
+++ b/src/components/TheWorkWeDo/TheWorkWeDo.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap");
 
 .theWorkWeDo {
   display: flex;
@@ -8,13 +8,12 @@
   margin: 0 auto;
   padding: 40px 0;
   background-color: none; /* Adjust as needed */
- 
 }
 
 .imageContainer {
   width: 35%;
   text-align: left; /* Align image to the left */
-  
+
   img {
     width: 100%; /* Make the image responsive */
     height: auto;
@@ -27,11 +26,11 @@
   padding-left: 20px; /* Space between text and image */
 
   .smallTitle {
-    color:  #E96B24;
+    color: #e96b24;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    font-family: 'Kanit', sans-serif;
+    font-family: "kanit", sans-serif;
 
     span {
       font-size: 18px; /* Small title size */
@@ -42,7 +41,7 @@
     hr {
       flex-grow: 1;
       border: none;
-      border-top: 2px solid  #E96B24; /* Line color and thickness */
+      border-top: 2px solid #e96b24; /* Line color and thickness */
     }
   }
 
@@ -50,13 +49,13 @@
     font-size: 36px; /* Big title size */
     font-weight: bold;
     margin-bottom: 20px;
-    font-family: 'Kanit', sans-serif;
-    color:  #E96B24;
+    font-family: "kanit", sans-serif;
+    color: #e96b24;
   }
 
   .paragraph {
     font-size: 16px; /* Adjust text size as needed */
     line-height: 1.6;
-    font-family: 'Kanit', sans-serif;
+    font-family: "kanit", sans-serif;
   }
 }
