--- a/src/components/WhoWeAreHome/WhoWeAreHome.module.scss
+++ b/src/components/WhoWeAreHome/WhoWeAreHome.module.scss
@@ -19,7 +19,7 @@
     display: flex;
     align-items: center;
    color:   #E96B24 ; 
-    font-family: 'Kanit', sans-serif;
+    font-family: 'kanit', sans-serif;
 
     span {
       font-size: 18px; /* Small title size */
@@ -37,14 +37,14 @@
   .bigTitle {
     font-size: 36px; /* Big title size */
     font-weight: bold;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'kanit', sans-serif;
     color:  #E96B24
   }
 
   .paragraph {
     font-size: 16px; /* Adjust text size as needed */
     line-height: 1.6;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'kanit', sans-serif;
   }
 }
 
