--- a/pages/globals.scss
+++ b/pages/globals.scss
@@ -1,5 +1,31 @@
 // styles/globals.scss
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/kanit/Kanit-Black.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
 
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/kanit/Kanit-BlackItalic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/kanit/Kanit-Bold.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/kanit/Kanit-BoldItalic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
 
 /* Add more font-face definitions for other Kanit font weights and styles as needed */
 
