font family changes

--- a/pages/globals.scss
+++ b/pages/globals.scss
@@ -1,11 +1,11 @@
 // styles/globals.scss
-
 @font-face {
   font-family: 'Kanit';
-  src: url('/fonts/kanit/Kanit-BoldItalic.ttf') format('truetype');
+  src: url('/fonts/kanit/Kanit-Black.ttf') format('truetype');
   font-weight: 200;
-  font-style: italic;
+  font-style: normal;
 }
+
 
 /* Add more font-face definitions for other Kanit font weights and styles as needed */
 
