--- a/pages/globals.scss
+++ b/pages/globals.scss
@@ -2,10 +2,30 @@
 @font-face {
   font-family: 'Kanit';
   src: url('/fonts/kanit/Kanit-Black.ttf') format('truetype');
-  font-weight: 400;
+  font-weight: 900;
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/kanit/Kanit-BlackItalic.ttf') format('truetype');
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/kanit/Kanit-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/kanit/Kanit-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+}
 
 /* Add more font-face definitions for other Kanit font weights and styles as needed */
 
