font family changes

--- a/pages/globals.scss
+++ b/pages/globals.scss
@@ -21,7 +21,11 @@
   src: url('/fonts/kanit/Kanit-Light.ttf') format('truetype');
   font-style: normal;
 }
-
+@font-face {
+  font-family: 'Kanit';
+  src: url('/fonts/kanit/Kanit-Medium.ttf') format('truetype');
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'Kanit';
