--- a/pages/globals.scss
+++ b/pages/globals.scss
@@ -24,6 +24,7 @@
 @font-face {
   font-family: 'Kanit';
   src: url('/fonts/kanit/Kanit-Medium.ttf') format('truetype');
+  font-weight: 300;
   font-style: normal;
 }
 
