--- a/pages/globals.scss
+++ b/pages/globals.scss
@@ -42,6 +42,7 @@
 body {
   font-family: 'Kanit', sans-serif; /* Set Kanit as the default font */
   margin: 0;
+  margin-top: 20px;
   padding: 0;
   box-sizing: border-box;
 }
