--- a/src/components/StatisticsSection/StatisticsSection.module.scss
+++ b/src/components/StatisticsSection/StatisticsSection.module.scss
@@ -1,5 +1,10 @@
 // File: src/components/StatisticsSection/StatisticsSection.module.scss
-
+@font-face {
+  font-family: 'DancingScript';
+  src: url('/fonts/DancingScript/DancingScript-Medium.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
 .statisticsSection {
   background-color: #e7e7e7;  // Background color to match the page
   padding: 30px;
@@ -28,6 +33,7 @@
   flex: 1;  // Equal width for each stat block
 
   h3 {
+    font-family: 'DancingScript', sans-serif;
     font-size: 3.5rem;  // Larger font size for the numbers
     margin: 0;
     color: #09A8D4;  // Main color for the numbers
